src/styles.scss
/* You can add global styles to this file, and also import other style files */
@import "../node_modules/codemirror/lib/codemirror.css";
@import "../node_modules/codemirror/addon/hint/show-hint.css";
@import "../node_modules/codemirror/addon/lint/lint.css";

@import "../node_modules/froala-editor/css/froala_editor.pkgd.min.css";
@import "../node_modules/froala-editor/css/froala_style.min.css";
@import "../node_modules/froala-editor/css/plugins/code_view.min.css";
@import "../node_modules/froala-editor/css/themes/dark.css";

@import "../node_modules/@intelstudios/font-awesome/fontawesome/css/all.css";

@import "~@circlon/angular-tree-component/css/angular-tree-component.css";

@import '../node_modules/text-security/text-security.css';

@import '../node_modules/at.js/dist/css/jquery.atwho.min.css';
// import angular/cdk styles, but override overlay z-index
// to work with bootstrap overlay z-index
@import "../node_modules/@angular/cdk/overlay/index";
$cdk-z-index-overlay-container: 1055;
$cdk-z-index-overlay: 1055;
$cdk-z-index-overlay-bakcdrop: 1055;
@include cdk-overlay();

// @import '../node_modules/pretty-checkbox/src/pretty-checkbox.scss';

@import "../node_modules/ngx-bootstrap/datepicker/bs-datepicker.css";

@import "bootstrap/dist/css/bootstrap.css";

body {
  background-color: #fff;
  font-size: 14px;
}

@import "../projects/styles/mixins";

.short-scroll {
  @include short-scroll();
}

// theme styles

.btn-group > .dropdown-menu:after,
.dropdown-toggle > .dropdown-menu:after,
.dropdown > .dropdown-menu:after {
  border-bottom-color: var(--is-control-bg-color);
}

.is-input {
  @include is-input;
  &[disabled] {
    @include is-input-disabled;
  }
}

// override font-family for is-check/radio to font-awesome free
is-checkbox,
is-radio {
  > label {
    > input {
      font-family: "Font Awesome 6 Pro" !important;
    }
  }
}

button {
  // margin: 5px;
}

h3 {
  margin-top: 1rem;
  font-size: 1.25rem;
}

.tab-content {
  padding: 16px;
}

// theme definitions

// light (default) theme
$light-base-color: #7d90a3;
$light-border-color: transparentize($light-base-color, 0.7);
$light-hover-color: transparentize($light-base-color, 0.5);
$light-handle-color: transparentize($light-base-color, 0.5);
$light-focused-color: transparentize($light-base-color, 0.1);

:root {
  // general colors

  --xe-dark-100: #2b3642;
  --xe-dark-96: #333d49;
  --xe-dark-88: #444e58;
  --xe-dark-80: #555e67;
  --xe-dark-72: #656d76;
  --xe-dark-64: #777e85;
  --xe-dark-56: #878d94;
  --xe-dark-48: #999ea4;
  --xe-dark-40: #a9aeb2;
  --xe-dark-32: #babdc1;
  --xe-dark-24: #cccfd1;
  --xe-dark-16: #dcdedf;
  --xe-dark-08: #edeeef;
  --xe-dark-04: #f5f6f6;
  --xe-white: #ffffff;
  --xe-white-04: #{transparentize(#fff, 0.96)};

  --xe-blue-100: #4674be;
  --xe-blue-96: #4d79c0;
  --xe-blue-88: #5c84c5;
  --xe-blue-80: #6a8fca;
  --xe-blue-72: #799ad0;
  --xe-blue-64: #88a5d5;
  --xe-blue-56: #96b0da;
  --xe-blue-48: #a6bce0;
  --xe-blue-40: #b4c7e4;
  --xe-blue-32: #c3d1e9;
  --xe-blue-24: #d2ddef;
  --xe-blue-16: #e0e8f4;
  --xe-blue-08: #eff3f9;

  --xe-green-100: #158915;
  --xe-green-96: #1e8d1e;
  --xe-green-88: #319731;
  --xe-green-80: #43a043;
  --xe-green-72: #55a955;
  --xe-green-64: #69b369;
  --xe-green-56: #7bbc7b;
  --xe-green-48: #8ec68e;
  --xe-green-40: #a0cfa0;
  --xe-green-32: #b3d8b3;
  --xe-green-24: #c6e2c6;
  --xe-green-16: #d8ebd8;
  --xe-green-08: #ebf5eb;

  --xe-orange-100: #e87e04;
  --xe-orange-96: #e8830d;
  --xe-orange-88: #ea8d22;
  --xe-orange-80: #ec9736;
  --xe-orange-72: #eea149;
  --xe-orange-64: #f0ac5e;
  --xe-orange-56: #f2b671;
  --xe-orange-48: #f3c186;
  --xe-orange-40: #f5cb9a;
  --xe-orange-32: #f7d5ad;
  --xe-orange-24: #f9dfc2;
  --xe-orange-16: #fbe9d5;
  --xe-orange-08: #fdf4ea;

  --xe-red-100: #df303e;
  --xe-red-96: #e03845;
  --xe-red-88: #e24955;
  --xe-red-80: #e55964;
  --xe-red-72: #e76973;
  --xe-red-64: #ea7a83;
  --xe-red-56: #ed8a92;
  --xe-red-48: #ef9ba2;
  --xe-red-40: #f2abb1;
  --xe-red-32: #f4bbc0;
  --xe-red-24: #f7ccd0;
  --xe-red-16: #f9dddf;
  --xe-red-08: #fceeef;

  --xe-purple-100: #a824eb;
  --xe-purple-96: #ab2ceb;
  --xe-purple-88: #b23eed;
  --xe-purple-80: #b94fee;
  --xe-purple-72: #c060f0;
  --xe-purple-64: #c773f2;
  --xe-purple-56: #ce84f4;
  --xe-purple-48: #d596f5;
  --xe-purple-40: #dba6f6;
  --xe-purple-32: #e3b8f9;
  --xe-purple-24: #e9c9fa;
  --xe-purple-16: #f0dbfb;
  --xe-purple-08: #f7edfd;

  --is-general-border-radius: 4px;
  --is-general-padding: 16px;
  --is-general-padding-small: 8px;

  --is-control-bg-color: var(--xe-white);
  --is-control-border-color: var(--xe-dark-32);
  --is-control-border-focus-color: var(--xe-dark-88);
  --is-control-border-hover-color: var(--xe-dark-88);
  --is-control-invalid-fg-color: var(--xe-red-100);
  --is-control-invalid-border-color: var(--xe-red-88);
  --is-control-border-pending-color: #f0c330;
  --is-control-fg-color: var(--xe-dark-88);
  --is-control-placeholder-color: var(--xe-dark-64);
  --is-control-handle-color: var(--xe-dark-64);
  --is-control-selected-item-color: var(--xe-dark-24);
  --is-control-active-item-bg-color: var(--xe-dark-04);
  --is-control-disabled-bg-color: var(--xe-dark-04);
  --is-control-disabled-fg-color: var(--xe-dark-64);
  --is-select-multi-item-bg-color: var(--xe-dark-24);
  --is-select-multi-item-fg-color: var(--xe-dark-100);

  --is-froala-toolbar-bg-color: var(--xe-white);
  --is-froala-toolbar-fg-color: var(--xe-dark-100);
  --is-froala-toolbar-separator: #ebebeb;

  --is-search-bg-color: var(--xe-dark-08);
  --is-search-fg-color: var(--xe-dark-64);
  --is-search-icon-color: var(--xe-dark-64);

  --is-portlet-border-color: var(--xe-dark-08);
  --is-portlet-header-bg-color: transparent;
  --is-portlet-header-fg-color: var(--xe-dark-100);
  // --is-select-search-bg-color: var(--xe-dark-08);
  --is-select-search-border-color: var(--xe-dark-16);
  --is-section-header-fg-color: var(--xe-white);
  --is-section-header-bg-color: var(--xe-dark-72);

  --is-badge-info-color: var(--xe-blue-24);
  --is-badge-warning-color: var(--xe-orange-24);
  --is-badge-danger-color: var(--xe-red-24);
  --is-badge-success-color: var(--xe-green-24);
  --is-badge-default-color: var(--xe-dark-24);
  --is-badge-primary-color: #374f65;

  --is-tabset-nav-bg-color: var(--xe-white);
  --is-tabset-border-color: var(--xe-dark-08);
  --is-tabset-item-fg-color: var(--xe-dark-64);
  --is-tabset-item-hover-fg-color: var(--xe-dark-88);
  --is-tabset-item-hover-border-color: var(--xe-dark-32);
  --is-tabset-item-active-border-color: var(--xe-dark-100);

  --is-datepicker-fg-color: var(--xe-dark-100);
  --is-datepicker-bg-color: var(--xe-white);
  --is-datepicker-hover-bg-color: var(--xe-dark-08);
  --is-datepicker-border-color: var(--xe-dark-08);
  --is-datepicker-day-fg-color: var(--xe-dark-88);
  --is-datepicker-day-active-fg-color: var(--xe-white);
  --is-datepicker-day-active-bg-color: var(--xe-dark-100);
  --is-datepicker-day-today-fg-color: var(--xe-dark-88);
  --is-datepicker-day-outside-fg-color: var(--xe-dark-32);

  --is-timepicker-fg-color: var(--xe-dark-64);
  --is-timepicker-hover-fg-color: var(--xe-dark-88);
  --is-timepicker-bg-color: var(--xe-dark-08);

  --is-movable-modal-header-fg-color: var(--xe-dark-100);
  --is-movable-modal-border-color: var(--xe-dark-08);
  --is-movable-modal-box-shadow-dragging-color: var(--xe-dark-64);

  // APP DEMO THEMING
  --app-content-bg: var(--xe-dark-08);
}

// dark theme
$dark-background: #2c3e50;
$dark-base-color: #72bcff;
$dark-border-color: transparentize($dark-base-color, 0.5);
$dark-hover-color: transparentize($dark-base-color, 0.3);
$dark-handle-color: transparentize(#fff, 0.5);

body.is-theme-dark {
  background-color: $dark-background;

  h1,
  h2,
  h3,
  h4,
  h5 {
    color: #fff;
  }
  --is-control-border-color: #{$dark-border-color};
  --is-control-bg-color: #374f65;
  --is-control-fg-color: #fff;
  --is-control-border-color: #{$dark-border-color};
  --is-control-border-focus-color: #{$dark-base-color};
  --is-control-border-hover-color: #{$dark-hover-color};
  --is-control-handle-color: #{$dark-handle-color};
  --is-control-selected-item-color: #{transparentize(#fff, 0.8)};
  --is-control-active-item-bg-color: #{transparentize(#72bcff, 0.8)};
  --is-control-disabled-bg-color: #304558;
  --is-control-disabled-fg-color: #{transparentize(#fff, 0.7)};

  --is-froala-toolbar-bg-color: var(--xe-dark-100);
  --is-froala-toolbar-fg-color: var(--xe-white);
  --is-froala-toolbar-separator: var(--xe-dark-100);

  --is-select-multi-item-bg-color: #72bcff;
  --is-select-multi-item-fg-color: #000;

  --is-datepicker-fg-color: #fff;
  --is-datepicker-bg-color: #{$dark-background};
  --is-datepicker-inline-body-bg-color: #{$dark-background};
  --is-datepicker-hover-bg-color: #000;
  --is-datepicker-border-color: #{$dark-border-color};
  --is-datepicker-day-fg-color: #fff;
  --is-datepicker-day-active-fg-color: #000;
  --is-datepicker-day-active-bg-color: red;
  --is-datepicker-day-today-fg-color: #fff;
  --is-datepicker-day-outside-fg-color: #fff;

  // APP DEMO THEMING
  --app-content-bg: var(--xe-dark-88);

  pre {
    color: var(--xe-dark-08);
  }
  a {
    color: var(--xe-blue-08);
  }
}

